backend/k8s/apigateway/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homybnb-ingress
spec:
  rules:
    - host: homybnb.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 3000
