backend/k8s/apigateway/ingress-homybnb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homybnb-alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 3000
